<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.diegog.tareacontactos.MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"/>


    </android.support.design.widget.TextInputLayout>

    <DatePicker
        android:id="@+id/dpFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        android:layout_below="@id/etNombre"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etTel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dpFechaNac">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etTel">
        <android.support.design.widget.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/etDescCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEmail">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion_contacto"
            />
    </android.support.design.widget.TextInputLayout>

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_siguiente"
        android:id="@+id/btnSiguiente"
        android:layout_below="@+id/etDescCont"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/btnSize" />


</RelativeLayout>
